# pandora_console/api/v1/config/routes.php
@@ -3,6 +3,7 @@
 use Slim\App;
 
 return function (App $app) {
+    (include __DIR__.'/../../../include/lib/Modules/Authentication/routes.php')($app);
     (include __DIR__.'/../../../include/lib/Modules/Events/routes.php')($app);
     (include __DIR__.'/../../../include/lib/Modules/Groups/routes.php')($app);
     (include __DIR__.'/../../../include/lib/Modules/Profiles/routes.php')($app);
